# delpi

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  CPPLINT.cfg  Dockerfile  MODULE.bazel  README.md
.github/workflows/: delpi.yml  docker.yml  docs.yml  pydelpi.yml
delpi/: BUILD.bazel  delpi.h  main.cpp
delpi/libs/: BUILD.bazel  gmp.cpp  gmp.h  qsopt_ex.cpp  qsopt_ex.h  soplex.cpp  soplex.h
delpi/parser/: BUILD.bazel  Driver.cpp  Driver.h  Parser.cpp  Parser.h  parser.cpp  parser.h
delpi/parser/mps/: BUILD.bazel  BoundType.cpp  BoundType.h  Column.cpp  Column.h  Driver.cpp  Driver.h  Row.cpp  Row.h  Sense.cpp  Sense.h  SenseType.cpp  SenseType.h  mps.h  parser.yy  scanner.h  scanner.ll
delpi/solver/: BUILD.bazel  Column.cpp  Column.h  LpResult.cpp  LpResult.h  LpRowSense.cpp  LpRowSense.h  LpSolver.cpp  LpSolver.h  QsoptexLpSolver.cpp  QsoptexLpSolver.h  Row.cpp  Row.h  SoplexLpSolver.cpp  SoplexLpSolver.h  solver.h
delpi/symbolic/: BUILD.bazel  Expression.cpp  Expression.h  ExpressionCell.cpp  ExpressionCell.h  Formula.cpp  Formula.h  FormulaKind.cpp  FormulaKind.h  LinearMonomial.cpp  LinearMonomial.h  Variable.cpp  Variable.h  symbolic.h
delpi/util/: ArgParser.cpp  ArgParser.h  BUILD.bazel  Config.cpp  Config.h  OptionValue.hpp  SelfReferenceCountingObject.hpp  Stats.cpp  Stats.h  Timer.cpp  Timer.h  calculator.cpp  calculator.h  concepts.h  definitions.h  error.h  exception.h  filesystem.cpp  filesystem.h  hash.hpp  intrusive_ptr.hpp  logging.cpp  logging.h
delpi/utils/: BUILD.bazel  calculator.cpp  calculator.h
docs/: Architecture.md  BUILD.bazel  Benchmarks.md  Changelog.md  Compilation.md  Installation.md  Library.md  Python.md  Theory.md  Todo.md  Usage.md
docs/_static/: header.html
pydelpi/: BUILD.bazel  __init__.py  __main__.py  _stubgen.py  interrupt.cpp  interrupt.h  lib.cpp  pydelpi.cpp  pydelpi.h  solver.cpp  symbolic.cpp  util.cpp
pydelpi/tests/: BUILD.bazel  TestExpression.py  TestFormula.py  TestSolver.py  TestVariable.py
scripts/: valgrind.sh
tests/parser/mps/: BUILD.bazel  TestBoundType.cpp  TestMpsDriver.cpp  TestSense.cpp
tests/solver/: BUILD.bazel  SolverUtils.h  TestLpSolver.cpp  TestLpSolverMps.cpp
tests/symbolic/: BUILD.bazel  TestExpression.cpp  TestExpressionCell.cpp  TestFormula.cpp  TestVariable.cpp
tests/util/: BUILD.bazel  TestArgparser.cpp  TestCalculator.cpp  TestConfig.cpp  TestError.cpp  TestFilesystem.cpp  TestLogging.cpp  TestTimer.cpp
tools/: BUILD.bazel  cpplint.bzl  generate_version_header.bat  generate_version_header.sh  make_var_substitution.bzl  pytest.bzl  rules_cc.bzl
