load("//tools:cpplint.bzl", "cpplint")
load("//tools:rules_cc.bzl", "DELPI_DESCRIPTION", "DELPI_NAME", "DELPI_VERSION", "delpi_cc_binary", "delpi_cc_library", "delpi_hdrs_tar", "delpi_srcs")

package(default_visibility = ["//visibility:public"])

delpi_srcs(
    name = "srcs",
    deps = [
        "//delpi/libs:all_srcs",
        "//delpi/symbolic:all_srcs",
        "//delpi/util:all_srcs",
    ],
)

delpi_hdrs_tar(
    name = "hdrs_tar",
    deps = [
        "//delpi/libs:hdrs_tar",
        "//delpi/util:hdrs_tar",
    ],
)

genrule(
    name = "generate_version_header",
    outs = ["version.h"],
    cmd = "$(location //tools:generate_version_header) %s %s '%s' > $@" % (DELPI_NAME, DELPI_VERSION, DELPI_DESCRIPTION),
    cmd_bat = "$(location //tools:generate_version_header.bat) %s %s '%s' $@" % (DELPI_NAME, DELPI_VERSION, DELPI_VERSION),
    stamp = True,
    tools = [
        "//tools:generate_version_header",
        "//tools:generate_version_header.bat",
    ],
)

delpi_cc_library(
    name = "version",
    hdrs = [":generate_version_header"],
)

delpi_cc_binary(
    name = "delpi",
    srcs = ["main.cpp"],
    deps = [
        ":version",
        "@fmt",
    ],
)

cc_shared_library(
    name = "libdelpi.so",
    shared_lib_name = "libdelpi.so",
    tags = [
        "manual",
        "no-dwyu",
        "no-iwyu",
    ],
    deps = [
        "//delpi/util:argparser",
        "//delpi/util:config",
    ],
)

cpplint()
