load("//tools:cpplint.bzl", "cpplint")
load("//tools:rules_cc.bzl", "delpi_cc_library", "delpi_hdrs_tar", "delpi_srcs")

package(default_visibility = [
    "//delpi:__subpackages__",
    "//pydelpi:__subpackages__",
    "//test:__subpackages__",
])

delpi_srcs(name = "srcs")

delpi_hdrs_tar(
    name = "hdrs_tar",
    subfolder = "libs",
)

delpi_cc_library(
    name = "gmp",
    srcs = ["gmp.cpp"],
    hdrs = ["gmp.h"],
    deps = [
        "//delpi/util:logging",
        "@gmp//:gmpxx",
    ],
)

delpi_cc_library(
    name = "soplex",
    srcs = ["soplex.cpp"],
    hdrs = ["soplex.h"],
    deps = [
        "//delpi/util:logging",
    ] + select({
        "//tools:enabled_soplex": ["@soplex"],
        "//conditions:default": [],
    }),
)

delpi_cc_library(
    name = "qsopt_ex",
    srcs = ["qsopt_ex.cpp"],
    hdrs = ["qsopt_ex.h"],
    tags = ["no-iwyu"],
    deps = [
        "//delpi/util:logging",
        "@gmp//:gmpxx",
    ] + select({
        "//tools:enabled_qsoptex": ["@qsopt_ex"],
        "//conditions:default": [],
    }),
)

cpplint()
