load("//tools:cpplint.bzl", "cpplint")
load("//tools:lexyacc.bzl", "gen_lex", "gen_yacc")
load("//tools:rules_cc.bzl", "delpi_cc_library", "delpi_hdrs_tar", "delpi_srcs")

package(default_visibility = [
    "//delpi:__subpackages__",
    "//pydelpi:__subpackages__",
    "//tests:__subpackages__",
])

delpi_srcs(name = "srcs")

delpi_hdrs_tar(
    name = "hdrs_tar",
    subfolder = "parser",
    deps = ["//delpi/parser/mps:hdrs_tar"],
)

delpi_cc_library(
    name = "driver",
    srcs = ["Driver.cpp"],
    hdrs = ["Driver.h"],
    implementation_deps = [
        "//delpi/libs:gmp",
        "//delpi/util:config",
        "//delpi/util:error",
    ],
    deps = [
        "//delpi/solver:lp_solver",
        "//delpi/util:stats",
    ],
)

delpi_cc_library(
    name = "parser",
    srcs = ["Parser.cpp"],
    hdrs = [
        "Parser.h",
        "parser.h",
    ],
    implementation_deps = [
        "//delpi/parser/mps",
        "//delpi/util:error",
    ],
    deps = [
        ":driver",
        "//delpi/solver:lp_solver",
        "//delpi/util:stats",
    ],
)

cpplint()
