load("//tools:cpplint.bzl", "cpplint")
load("//tools:rules_cc.bzl", "delpi_cc_library", "delpi_hdrs_tar", "delpi_srcs")

package(default_visibility = [
    "//delpi:__subpackages__",
    "//pydelpi:__subpackages__",
    "//tests:__subpackages__",
])

delpi_srcs(name = "srcs")

delpi_hdrs_tar(
    name = "hdrs_tar",
    subfolder = "symbolic",
)

delpi_cc_library(
    name = "symbolic",
    hdrs = ["symbolic.h"],
    deps = [
        ":expression",
        ":formula",
        ":formula_kind",
        ":linear_monomial",
        ":variable",
    ],
)

delpi_cc_library(
    name = "variable",
    srcs = ["Variable.cpp"],
    hdrs = ["Variable.h"],
    implementation_deps = ["//delpi/util:error"],
    deps = ["//delpi/util:logging"],
)

delpi_cc_library(
    name = "linear_monomial",
    srcs = ["LinearMonomial.cpp"],
    hdrs = ["LinearMonomial.h"],
    deps = [
        ":variable",
        "//delpi/libs:gmp",
        "//delpi/util:logging",
    ],
)

delpi_cc_library(
    name = "expression",
    srcs = [
        "Expression.cpp",
        "ExpressionCell.cpp",
    ],
    hdrs = [
        "Expression.h",
        "ExpressionCell.h",
    ],
    implementation_deps = [
        "//delpi/util:error",
        "//delpi/util:hash",
    ],
    deps = [
        ":linear_monomial",
        ":variable",
        "//delpi/libs:gmp",
        "//delpi/util:intrusive_ptr",
        "//delpi/util:logging",
        "//delpi/util:self_reference_counting_object",
    ],
)

delpi_cc_library(
    name = "formula_kind",
    srcs = ["FormulaKind.cpp"],
    hdrs = ["FormulaKind.h"],
    implementation_deps = ["//delpi/util:error"],
    deps = ["//delpi/util:logging"],
)

delpi_cc_library(
    name = "formula",
    srcs = ["Formula.cpp"],
    hdrs = ["Formula.h"],
    implementation_deps = [
        "//delpi/util:error",
        "//delpi/util:hash",
    ],
    deps = [
        ":expression",
        ":formula_kind",
        "//delpi/libs:gmp",
        "//delpi/util:logging",
    ],
)

cpplint()
