load("//tools:cpplint.bzl", "cpplint")
load("//tools:rules_cc.bzl", "delpi_cc_library", "delpi_srcs")

package(default_visibility = [
    "//delpi:__subpackages__",
    "//tests:__subpackages__",
])

delpi_srcs(name = "srcs")

delpi_cc_library(
    name = "calculator",
    srcs = ["calculator.cpp"],
    hdrs = ["calculator.h"],
    deps = ["@spdlog"],
)

cpplint()
