load("//tools:cpplint.bzl", "cpplint")
load("//tools:rules_cc.bzl", "delpi_cc_library", "delpi_hdrs_tar", "delpi_srcs")

package(default_visibility = [
    "//delpi:__subpackages__",
    "//tests:__subpackages__",
])

delpi_srcs(name = "srcs")

delpi_hdrs_tar(
    name = "hdrs_tar",
    subfolder = "util",
)

delpi_cc_library(
    name = "argparser",
    srcs = ["ArgParser.cpp"],
    hdrs = ["ArgParser.h"],
    implementation_deps = [
        ":error",
        ":filesystem",
        ":logging",
        "//delpi:version",
    ] + select({
        "//tools:enabled_qsoptex": ["//delpi/libs:qsopt_ex"],
        "//conditions:default": [],
    }) + select({
        "//tools:enabled_soplex": ["//delpi/libs:soplex"],
        "//conditions:default": [],
    }),
    tags = ["no-cpplint"],
    deps = [
        ":config",
        "@argparse",
    ],
)

delpi_cc_library(
    name = "config",
    srcs = ["Config.cpp"],
    hdrs = [
        "Config.h",
        "OptionValue.hpp",
    ],
    implementation_deps = [
        ":error",
        ":filesystem",
    ],
    deps = [":logging"],
)

delpi_cc_library(
    name = "error",
    hdrs = ["error.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":exception",
        ":logging",
        "@fmt",
    ],
)

delpi_cc_library(
    name = "exception",
    hdrs = ["exception.h"],
    visibility = ["//visibility:public"],
)

delpi_cc_library(
    name = "logging",
    srcs = ["logging.cpp"],
    hdrs = ["logging.h"],
    deps = [
        "@fmt",
        "@spdlog",
    ],
)

delpi_cc_library(
    name = "stats",
    srcs = ["Stats.cpp"],
    hdrs = ["Stats.h"],
    implementation_deps = ["@fmt"],
    tags = ["no-dwyu"],
    deps = [":timer"],
)

delpi_cc_library(
    name = "filesystem",
    srcs = ["filesystem.cpp"],
    hdrs = ["filesystem.h"],
    implementation_deps = [":logging"],
)

delpi_cc_library(
    name = "timer",
    srcs = ["Timer.cpp"],
    hdrs = ["Timer.h"],
    implementation_deps = [
        ":exception",
        ":logging",
    ],
)

delpi_cc_library(
    name = "definitions",
    hdrs = ["definitions.h"],
)

delpi_cc_library(
    name = "concepts",
    hdrs = ["concepts.h"],
)

cpplint()
