"""Tests for the symbolic submodule."""

load("//tools:rules_cc.bzl", "delpi_cc_googletest")

delpi_cc_googletest(
    name = "test_variable",
    tags = ["symbolic"],
    deps = ["//delpi/symbolic:variable"],
)

delpi_cc_googletest(
    name = "test_expression",
    tags = ["symbolic"],
    deps = ["//delpi/symbolic:expression"],
)

delpi_cc_googletest(
    name = "test_expression_cell",
    tags = ["symbolic"],
    deps = ["//delpi/symbolic:expression"],
)
