"""Tests for the util submodule."""

load("//tools:rules_cc.bzl", "delpi_cc_googletest")

delpi_cc_googletest(
    name = "test_argparser",
    tags = ["util"],
    deps = ["//delpi/util:argparser"],
)

delpi_cc_googletest(
    name = "test_config",
    tags = ["util"],
    deps = ["//delpi/util:config"],
)

delpi_cc_googletest(
    name = "test_error",
    tags = ["util"],
    deps = ["//delpi/util:error"],
)

delpi_cc_googletest(
    name = "test_filesystem",
    tags = ["util"],
    deps = ["//delpi/util:filesystem"],
)

delpi_cc_googletest(
    name = "test_logging",
    tags = ["util"],
    deps = ["//delpi/util:logging"],
)

delpi_cc_googletest(
    name = "test_timer",
    tags = ["util"],
    deps = ["//delpi/util:timer"],
)
