load("//tools:cpplint.bzl", "cpplint")
load("//tools:lexyacc.bzl", "gen_lex", "gen_yacc")
load("//tools:rules_cc.bzl", "delpi_cc_library", "delpi_hdrs_tar", "delpi_srcs")

package(default_visibility = [
    "//delpi:__subpackages__",
    "//pydelpi:__subpackages__",
    "//tests:__subpackages__",
])

delpi_srcs(name = "srcs")

delpi_hdrs_tar(
    name = "hdrs_tar",
    subfolder = "mps",
)

gen_lex(
    name = "scanner",
    src = "scanner.ll",
    hdr = "scanner.h",
    source_out = "scanner.ll.cpp",
    visibility = ["//visibility:private"],
)

gen_yacc(
    name = "parser",
    src = "parser.yy",
    extra_outs = ["location.hh"],
    header_out = "parser.yy.hpp",
    source_out = "parser.yy.cpp",
    visibility = ["//visibility:private"],
)

delpi_cc_library(
    name = "mps_types",
    srcs = [
        "BoundType.cpp",
        "SenseType.cpp",
    ],
    hdrs = [
        "BoundType.h",
        "SenseType.h",
    ],
    implementation_deps = ["//delpi/util:error"],
    deps = ["//delpi/util:logging"],
)

delpi_cc_library(
    name = "mps_data",
    srcs = [
        "Column.cpp",
        "Row.cpp",
    ],
    hdrs = [
        "Column.h",
        "Row.h",
    ],
    implementation_deps = ["//delpi/util:error"],
    deps = [
        ":mps_types",
        "//delpi/libs:gmp",
        "//delpi/symbolic:variable",
        "//delpi/util:logging",
    ],
)

delpi_cc_library(
    name = "mps",
    srcs = [
        "Driver.cpp",
        ":parser",
        ":scanner",
    ],
    hdrs = ["Driver.h"],
    implementation_deps = [
        "//delpi/util:error",
        "//delpi/util:logging",
    ],
    tags = [
        "no-dwyu",
        "no-iwyu",
    ],
    deps = [
        ":mps_data",
        "//delpi/libs:gmp",
        "//delpi/parser:driver",
        "//delpi/solver:lp_solver",
        "@rules_flex//flex:current_flex_toolchain",
    ] + select({
        "//tools:python_build": ["//pydelpi:interrupt"],
        "//conditions:default": [],
    }),
)

cpplint()
