load("//tools:rules_cc.bzl", "delpi_cc_googletest")

delpi_cc_googletest(
    name = "test_bound_type",
    tags = ["mps"],
    deps = ["//delpi/parser/mps:mps_types"],
)

delpi_cc_googletest(
    name = "test_sense",
    tags = ["mps"],
    deps = ["//delpi/parser/mps:mps_types"],
)

delpi_cc_googletest(
    name = "test_mps_driver",
    tags = ["mps"],
    deps = ["//delpi/parser/mps"],
)
